Showing/hiding invisible comments.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -191,6 +191,7 @@
   "hide" : "Hide",
   "hide-ellipsis" : "Hide...",
   "hide-friendship" : "Hide friendship",
+  "hide-hidden-comments" : "Hide hidden comments",
   "hide-in-discussion" : "Hide in the discussion",
   "hide-in-discussions" : "Hide in discussions",
   "hide-my-subscription" : "Hide my subscription",
@@ -660,6 +661,7 @@
   "share-ellipsis" : "Share...",
   "share-page" : "Share page",
   "show-formatting-hint" : "Show formatting hint",
+  "show-hidden-comments" : "Show hidden comments",
   "show-list-reactions" : "Show the detailed list of reactions",
   "show-number-reactions" : "Show the number of reactions",
   "signature-correct" : "Signature is correct",
@@ -723,6 +725,7 @@
   "upload-too-large" : "File \"{name}\" cannot be uploaded because its size ({size}) is larger than maximum allowed size ({maxSize})",
   "url" : "URL",
   "used-by-addon" : "Used by add-on:",
+  "user-comments-hidden" : "This user's comments are hidden",
   "verify-signature" : "Verify signature",
   "view-as-chart" : "View as chart",
   "view-as-list" : "View as list",
