--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -191,6 +191,7 @@
   "hide" : "Скрыть",
   "hide-ellipsis" : "Скрыть...",
   "hide-friendship" : "Скрыть дружбу",
+  "hide-hidden-comments" : "Спрятать скрытые комментарии",
   "hide-in-discussion" : "Скрыть в обсуждении",
   "hide-in-discussions" : "Скрыть в обсуждениях",
   "hide-my-subscription" : "Скрыть мою подписку",
@@ -660,6 +661,7 @@
   "share-ellipsis" : "Поделиться...",
   "share-page" : "Поделиться страницей",
   "show-formatting-hint" : "Показать подсказку по форматированию",
+  "show-hidden-comments" : "Показать скрытые комментарии",
   "show-list-reactions" : "Показывать список реакций",
   "show-number-reactions" : "Показывать число реакций",
   "signature-correct" : "Подпись верна",
@@ -723,6 +725,7 @@
   "upload-too-large" : "Файл \"{name}\" не может быть загружен, потому что его размер ({size}) больше максимально разрешенного ({maxSize})",
   "url" : "URL",
   "used-by-addon" : "Используется дополнением:",
+  "user-comments-hidden" : "Комментарии этого пользователя скрываются",
   "verify-signature" : "Проверить подпись",
   "view-as-chart" : "В виде диаграммы",
   "view-as-list" : "В виде списка",
