--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -191,6 +191,7 @@
   "hide" : "Приховати",
   "hide-ellipsis" : "Приховати...",
   "hide-friendship" : "Приховати дружбу",
+  "hide-hidden-comments" : "Сховати приховані коментарі",
   "hide-in-discussion" : "Приховати в обговоренні",
   "hide-in-discussions" : "Приховати в обговореннях",
   "hide-my-subscription" : "Приховати мою підписку",
@@ -660,6 +661,7 @@
   "share-ellipsis" : "Поділитися...",
   "share-page" : "Поділитися сторінкою",
   "show-formatting-hint" : "Показати підказку щодо форматування",
+  "show-hidden-comments" : "Показати приховані коментарі",
   "show-list-reactions" : "Показувати список реакцій",
   "show-number-reactions" : "Показувати кількість реакцій",
   "signature-correct" : "Підпис вірний",
@@ -723,6 +725,7 @@
   "upload-too-large" : "Файл \"{name}\" не може бути надісланий, тому що його розмір ({size}) більший за максимально дозволений ({maxSize})",
   "url" : "URL",
   "used-by-addon" : "Використовується додатком:",
+  "user-comments-hidden" : "Коментарі цього користувача приховуються",
   "verify-signature" : "Перевірити підпис",
   "view-as-chart" : "У вигляді діаграми",
   "view-as-list" : "У вигляді списку",
