Sending sheriff orders directly from the menu.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -28,6 +28,7 @@
   "avatar-shape" : "Avatar shape",
   "avatar-too-small" : "Avatar image size should be at least 100x100 pixels.",
   "back-to-feed" : "← {feed}",
+  "banned-android-google-play" : "Banned on Android (Google Play)",
   "bio" : "Bio",
   "block" : "Block",
   "blocked" : "Blocked",
@@ -63,6 +64,7 @@
   "comments" : "Comments",
   "comments-disabled" : "Comments are disabled",
   "comments-visible-to" : "Comments are visible to",
+  "comment-title" : "Comment",
   "comment-updated-at" : "updated",
   "compress-images" : "Compress images",
   "confirm-password" : "Confirm password",
@@ -96,6 +98,7 @@
   "delete" : "Delete",
   "delete-comment" : "Do you really want to delete the comment \"{heading}\"?",
   "delete-draft" : "Delete draft",
+  "delete-post" : "Do you really want to delete the post \"{heading}\"?",
   "deleting" : "Deleting...",
   "deny-comments" : "Deny comments",
   "deny-comments-reactions" : "Deny comments and reactions",
@@ -189,12 +192,16 @@
   "height" : "Height",
   "help" : "Help",
   "hide" : "Hide",
+  "hide-blog-google-play" : "Do not show the blog <0>{name}</0> in Android (Google Play).",
+  "hide-comment-google-play" : "Do not show the comment \"{heading}\" in Android (Google Play).",
   "hide-ellipsis" : "Hide...",
   "hide-friendship" : "Hide friendship",
   "hide-hidden-comments" : "Hide hidden comments",
   "hide-in-discussion" : "Hide in the discussion",
   "hide-in-discussions" : "Hide in discussions",
+  "hide-in-google-play" : "Hide in Android (Google Play)...",
   "hide-my-subscription" : "Hide my subscription",
+  "hide-post-google-play" : "Do not show the post \"{heading}\" in Android (Google Play).",
   "hide-subscription-to-me" : "Hide subscription to me",
   "ignore" : "Ignore",
   "image" : "Image",
@@ -459,6 +466,7 @@
   },
   "read-and-agree-with" : "I read and agree with",
   "read-more" : "Read more...",
+  "reason" : "Reason",
   "received-mail" : "Received the mail already",
   "register" : "Register",
   "register-different-name" : "Register a different name",
@@ -487,6 +495,7 @@
   "select-all" : "Select all",
   "selected-automatically" : "Selected automatically",
   "selected-preferred" : "Selected are preferred",
+  "send" : "Send",
   "set-as-default" : "Set as default",
   "set-by-admin" : "set by admin",
   "set-by-post-owner" : "set by post author",
@@ -660,6 +669,19 @@
   "share" : "Share",
   "share-ellipsis" : "Share...",
   "share-page" : "Share page",
+  "sheriff-order" : "Sheriff's Order",
+  "sheriff-order-reason" : {
+    "copyright" : "Copyright infringement",
+    "defamatory" : "Defamation (including racism)",
+    "impersonating" : "Impersonation",
+    "malware" : "Malware",
+    "privacy" : "Privacy violation",
+    "scam" : "Scam",
+    "spam" : "Spam",
+    "threat" : "Threats",
+    "unknown" : "Unknown",
+    "unlawful" : "Violation of the law"
+  },
   "show-formatting-hint" : "Show formatting hint",
   "show-hidden-comments" : "Show hidden comments",
   "show-list-reactions" : "Show the detailed list of reactions",
@@ -706,6 +728,10 @@
   "unfollow-comments" : "Unfollow comments",
   "unfriend" : "Unfriend",
   "unhide" : "Unhide",
+  "unhide-blog-google-play" : "Do you really want to unhide the blog <b>{name}</b> in Android (Google Play)?",
+  "unhide-comment-google-play" : "Do you really want to unhide the comment \"{heading}\" in Android (Google Play)?",
+  "unhide-in-google-play" : "Unhide in Android (Google Play)...",
+  "unhide-post-google-play" : "Do you really want to unhide the post \"{heading}\" in Android (Google Play)?",
   "unkick" : "Take back",
   "unknown-name" : "Unknown name",
   "unpin" : "Unpin",
