--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -28,6 +28,7 @@
   "avatar-shape" : "Форма аватара",
   "avatar-too-small" : "Розмір картинки для аватара повинен бути хоча б 100x100 пікселів",
   "back-to-feed" : "← {feed}",
+  "banned-android-google-play" : "Заборонено до показу на Андроїд (Google Play)",
   "bio" : "Про себе",
   "block" : "Заблокувати",
   "blocked" : "Заблокований",
@@ -63,6 +64,7 @@
   "comments" : "Коментарі",
   "comments-disabled" : "Коментарі вимкнені",
   "comments-visible-to" : "Коментарі видно",
+  "comment-title" : "Коментар",
   "comment-updated-at" : "змінений",
   "compress-images" : "Стискати картинки",
   "confirm-password" : "Підтвердження пароля",
@@ -96,6 +98,7 @@
   "delete" : "Видалити",
   "delete-comment" : "Ви дійсно бажаєте видалити коментар \"{heading}\"?",
   "delete-draft" : "Видалити чернетку",
+  "delete-post" : "Ви дійсно бажаєте видалити пост \"{heading}\"?",
   "deleting" : "Видалення...",
   "deny-comments" : "Заборонити коментарі",
   "deny-comments-reactions" : "Заборонити коментарі та реакції",
@@ -189,12 +192,16 @@
   "height" : "Висота",
   "help" : "Допомога",
   "hide" : "Приховати",
+  "hide-blog-google-play" : "Не показувати блог <0>{name}</0> у Android (Google Play).",
+  "hide-comment-google-play" : "Не показувати коментар \"{heading}\" у Android (Google Play).",
   "hide-ellipsis" : "Приховати...",
   "hide-friendship" : "Приховати дружбу",
   "hide-hidden-comments" : "Сховати приховані коментарі",
   "hide-in-discussion" : "Приховати в обговоренні",
   "hide-in-discussions" : "Приховати в обговореннях",
+  "hide-in-google-play" : "Сховати у Android (Google Play)...",
   "hide-my-subscription" : "Приховати мою підписку",
+  "hide-post-google-play" : "Не показувати пост \"{heading}\" у Android (Google Play).",
   "hide-subscription-to-me" : "Приховати підписку на мене",
   "ignore" : "Ігнорувати",
   "image" : "Картинка",
@@ -459,6 +466,7 @@
   },
   "read-and-agree-with" : "Я прочитав і погоджуюсь з",
   "read-more" : "Читати далі...",
+  "reason" : "Причина",
   "received-mail" : "Вже отримав листа",
   "register" : "Реєстрація",
   "register-different-name" : "Зареєструвати інше ім'я",
@@ -487,6 +495,7 @@
   "select-all" : "Обрати все",
   "selected-automatically" : "Обирається автоматично",
   "selected-preferred" : "Обрані мають перевагу",
+  "send" : "Надіслати",
   "set-as-default" : "Зробити значенням за замовчуванням",
   "set-by-admin" : "встановлено адміністратором",
   "set-by-post-owner" : "встановлено автором поста",
@@ -660,6 +669,19 @@
   "share" : "Поділитися",
   "share-ellipsis" : "Поділитися...",
   "share-page" : "Поділитися сторінкою",
+  "sheriff-order" : "Наказ шерифа",
+  "sheriff-order-reason" : {
+    "copyright" : "Порушення авторських прав",
+    "defamatory" : "Наклеп (включаючи расизм)",
+    "impersonating" : "Видача себе за іншого",
+    "malware" : "Шкідливе ПЗ",
+    "privacy" : "Порушення таємниці особистого життя",
+    "scam" : "Шахрайство",
+    "spam" : "Спам",
+    "threat" : "Погрози",
+    "unknown" : "Невідомо",
+    "unlawful" : "Порушення закону"
+  },
   "show-formatting-hint" : "Показати підказку щодо форматування",
   "show-hidden-comments" : "Показати приховані коментарі",
   "show-list-reactions" : "Показувати список реакцій",
@@ -706,6 +728,10 @@
   "unfollow-comments" : "Не слідкувати за коментарями",
   "unfriend" : "Вилучити з друзів",
   "unhide" : "Розкрити",
+  "unhide-blog-google-play" : "Ви дійсно бажаєте розкрити блог <b>{name}</b> у Android (Google Play)?",
+  "unhide-comment-google-play" : "Ви дійсно бажаєте розкрити коментар \"{heading}\" у Android (Google Play)?",
+  "unhide-in-google-play" : "Розкрити у Android (Google Play)...",
+  "unhide-post-google-play" : "Ви дійсно бажаєте розкрити пост \"{heading}\" у Android (Google Play)?",
   "unkick" : "Повернути",
   "unknown-name" : "Невідоме ім'я",
   "unpin" : "Відкріпити",
