--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -28,6 +28,7 @@
   "avatar-shape" : "Форма аватара",
   "avatar-too-small" : "Размер картинки для аватара должен быть хотя бы 100x100 пикселов",
   "back-to-feed" : "← {feed}",
+  "banned-android-google-play" : "Запрещено к показу на Android (Google Play)",
   "bio" : "О себе",
   "block" : "Заблокировать",
   "blocked" : "Заблокирован",
@@ -63,6 +64,7 @@
   "comments" : "Комментарии",
   "comments-disabled" : "Комментарии отключены",
   "comments-visible-to" : "Комментарии видны",
+  "comment-title" : "Комментарий",
   "comment-updated-at" : "изменён",
   "compress-images" : "Сжимать картинки",
   "confirm-password" : "Подтверждение пароля",
@@ -96,6 +98,7 @@
   "delete" : "Удалить",
   "delete-comment" : "Вы действительно хотите удалить комментарий \"{heading}\"?",
   "delete-draft" : "Удалить черновик",
+  "delete-post" : "Вы действительно хотите удалить пост \"{heading}\"?",
   "deleting" : "Удаление...",
   "deny-comments" : "Запретить комментарии",
   "deny-comments-reactions" : "Запретить комментарии и реакции",
@@ -189,12 +192,16 @@
   "height" : "Высота",
   "help" : "Помощь",
   "hide" : "Скрыть",
+  "hide-blog-google-play" : "Не показывать блог <0>{name}</0> в Android (Google Play).",
+  "hide-comment-google-play" : "Не показывать комментарий \"{heading}\" в Android (Google Play).",
   "hide-ellipsis" : "Скрыть...",
   "hide-friendship" : "Скрыть дружбу",
   "hide-hidden-comments" : "Спрятать скрытые комментарии",
   "hide-in-discussion" : "Скрыть в обсуждении",
   "hide-in-discussions" : "Скрыть в обсуждениях",
+  "hide-in-google-play" : "Скрыть в Android (Google Play)...",
   "hide-my-subscription" : "Скрыть мою подписку",
+  "hide-post-google-play" : "Не показывать пост \"{heading}\" в Android (Google Play).",
   "hide-subscription-to-me" : "Скрыть подписку на меня",
   "ignore" : "Игнорировать",
   "image" : "Картинка",
@@ -459,6 +466,7 @@
   },
   "read-and-agree-with" : "Я прочёл и согласен с",
   "read-more" : "Читать дальше...",
+  "reason" : "Причина",
   "received-mail" : "Уже получил письмо",
   "register" : "Регистрация",
   "register-different-name" : "Зарегистрировать другое имя",
@@ -487,6 +495,7 @@
   "select-all" : "Выбрать все",
   "selected-automatically" : "Выбирается автоматически",
   "selected-preferred" : "Выбранные предпочтительны",
+  "send" : "Отправить",
   "set-as-default" : "Сделать значением по умолчанию",
   "set-by-admin" : "установлено администратором",
   "set-by-post-owner" : "установлено автором поста",
@@ -660,6 +669,19 @@
   "share" : "Поделиться",
   "share-ellipsis" : "Поделиться...",
   "share-page" : "Поделиться страницей",
+  "sheriff-order" : "Приказ шерифа",
+  "sheriff-order-reason" : {
+    "copyright" : "Нарушение авторских прав",
+    "defamatory" : "Клевета (включая расизм)",
+    "impersonating" : "Выдача себя за другого",
+    "malware" : "Вредоносное ПО",
+    "privacy" : "Нарушение тайны личной жизни",
+    "scam" : "Мошенничество",
+    "spam" : "Спам",
+    "threat" : "Угрозы",
+    "unknown" : "Неизвестно",
+    "unlawful" : "Нарушение закона"
+  },
   "show-formatting-hint" : "Показать подсказку по форматированию",
   "show-hidden-comments" : "Показать скрытые комментарии",
   "show-list-reactions" : "Показывать список реакций",
@@ -706,6 +728,10 @@
   "unfollow-comments" : "Не следить за комментариями",
   "unfriend" : "Удалить из друзей",
   "unhide" : "Раскрыть",
+  "unhide-blog-google-play" : "Вы действительно хотите раскрыть блог <b>{name}</b> в Android (Google Play)?",
+  "unhide-comment-google-play" : "Вы действительно хотите раскрыть комментарий \"{heading}\" в Android (Google Play)?",
+  "unhide-in-google-play" : "Раскрыть в Android (Google Play)...",
+  "unhide-post-google-play" : "Вы действительно хотите раскрыть пост \"{heading}\" в Android (Google Play)?",
   "unkick" : "Вернуть",
   "unknown-name" : "Неизвестное имя",
   "unpin" : "Открепить",
