Do not display blogs, posts and comments hidden by sheriff on Android (Google Play).

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -72,6 +72,7 @@
   "connected" : "Connected",
   "connect-home" : "Connect to Home",
   "connecting" : "Connecting",
+  "content-not-accessible-android" : "This content is not accessible on Android.",
   "continue-reading" : "Continue Reading →",
   "copy" : "Copy",
   "copy-image-from-internet" : "Copy Image From Internet",
