--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -72,6 +72,7 @@
   "connected" : "Підключений",
   "connect-home" : "Підключитись до дому",
   "connecting" : "Підключення",
+  "content-not-accessible-android" : "Цей контент недоступний на Android.",
   "continue-reading" : "Читати далі →",
   "copy" : "Копіювати",
   "copy-image-from-internet" : "Копіювати картинку з Інтернету",
