--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -72,6 +72,7 @@
   "connected" : "Подключён",
   "connect-home" : "Подключиться к дому",
   "connecting" : "Подключение",
+  "content-not-accessible-android" : "Этот контент недоступен на Android.",
   "continue-reading" : "Читать дальше →",
   "copy" : "Копировать",
   "copy-image-from-internet" : "Копировать картинку из Интернета",
