--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -262,7 +262,11 @@
       "comment-post-task-failed" : "Не удалось добавить комментарий к посту {node} {heading}",
       "comment-reaction-added" : "{reactions} ваш комментарий {heading} к {posting}",
       "comment-reaction-task-failed" : "Не удалось подписать реакцию на комментарий {commentNode} {commentHeading} к посту {postingNode} {postingHeading}",
+      "comment-sheriff-marked" : "Шериф запретил показывать ваш комментарий {heading} к {posting} на Android",
+      "comment-sheriff-unmarked" : "Шериф разрешил показывать ваш комментарий {heading} к {posting} на Android",
       "comment-update-task-failed" : "Не удалось подписать комментарий {commentHeading} к посту {node} {postingHeading}",
+      "feed-sheriff-marked" : "Шериф запретил показывать ваш блог на Android",
+      "feed-sheriff-unmarked" : "Шериф разрешил показывать ваш блог на Android",
       "friend-added" : "{node} {gender, select, female {добавила} other {добавил}} вас в группу друзей \"{group}\"",
       "friend-added-to-friends" : "{node} {gender, select, female {добавила} other {добавил}} вас к себе в друзья",
       "friend-deleted" : "{node} {gender, select, female {удалила} other {удалил}} вас из группы друзей \"{group}\"",
@@ -274,6 +278,8 @@
       "posting-media-reaction-failed" : "Не удалось подписать реакцию на картинку в посте {node} {heading}",
       "posting-post-task-failed" : "Не удалось добавить ваш пост в блог {node}",
       "posting-reaction-task-failed" : "Не удалось подписать реакцию на пост {node} {heading}",
+      "posting-sheriff-marked" : "Шериф запретил показывать ваш пост {heading} на Android",
+      "posting-sheriff-unmarked" : "Шериф разрешил показывать ваш пост {heading} на Android",
       "posting-subscribe-task-failed" : "Не удалось подписаться на комментарии к посту {node} {heading}",
       "posting-updated" : "{node} {nodeGender, select, female {обновила} other {обновил}} свой пост {heading}",
       "posting-update-task-failed" : "Не удалось подписать ваш пост {heading} в блоге {node}",
