--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -262,7 +262,11 @@
       "comment-post-task-failed" : "Не вдалося додати коментар до посту {node} {heading}",
       "comment-reaction-added" : "{reactions} ваш коментар {heading} до {posting}",
       "comment-reaction-task-failed" : "Не вдалося підписати реакцію на коментар {commentNode} {commentHeading} до посту {postingNode} {postingHeading}",
+      "comment-sheriff-marked" : "Шериф заборонив показувати ваш коментар {heading} до {posting} на Android",
+      "comment-sheriff-unmarked" : "Шериф дозволив показувати ваш коментар {heading} до {posting} на Android",
       "comment-update-task-failed" : "Не вдалося підписати коментар {commentHeading} до посту {node} {postingHeading}",
+      "feed-sheriff-marked" : "Шериф заборонив показувати ваш блог на Android",
+      "feed-sheriff-unmarked" : "Шериф дозволив показувати ваш блог на Android",
       "friend-added" : "{node} {gender, select, female {додала} other {додав}} вас до групи друзів \"{group}\"",
       "friend-added-to-friends" : "{node} {gender, select, female {додала} other {додав}} вас до себе у друзі",
       "friend-deleted" : "{node} {gender, select, female {вилучила} other {вилучив}} вас з групи друзів \"{group}\"",
@@ -274,6 +278,8 @@
       "posting-media-reaction-failed" : "Не вдалося підписати реакцію на картинку у пості {node} {heading}",
       "posting-post-task-failed" : "Не вдалося додати ваш пост у блог {node}",
       "posting-reaction-task-failed" : "Не вдалося підписати реакцію на пост {node} {heading}",
+      "posting-sheriff-marked" : "Шериф заборонив показувати ваш пост {heading} на Android",
+      "posting-sheriff-unmarked" : "Шериф дозволив показувати ваш пост {heading} на Android",
       "posting-subscribe-task-failed" : "Не вдалося підписатись на коментарі до посту {node} {heading}",
       "posting-updated" : "{node} {nodeGender, select, female {оновила} other {оновив}} свій пост {heading}",
       "posting-update-task-failed" : "Не вдалося підписати ваш пост {heading} у блозі {node}",
