Display details of a sheriff order.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -15,6 +15,9 @@
   "all" : "All",
   "allowed-oppose-reactions" : "Allowed \"Oppose\" reactions",
   "allowed-support-reactions" : "Allowed \"Support\" reactions",
+  "allow-showing-blog-google-play" : "<0>Allow</0> showing the blog <1>{name}</1> on Android (Google Play).",
+  "allow-showing-comment-google-play" : "<0>Allow</0> showing the <1>{commentName}</1>'s comment \"{commentHeading}\" to the <1>{postingName}</1>'s post \"{postingHeading}\" on Android (Google Play).",
+  "allow-showing-post-google-play" : "<0>Allow</0> showing the <1>{name}</1>'s post \"{heading}\" on Android (Google Play).",
   "alt-text" : "Alternative text",
   "alt-text-button" : "Alt text",
   "ask" : "Ask",
@@ -105,7 +108,11 @@
   "deny-comments-reactions" : "Deny comments and reactions",
   "deny-everything-hide" : "Deny everything and hide in discussions",
   "deny-everything-hide-in-discussion" : "Deny everything and hide in the discussion",
+  "deny-showing-blog-google-play" : "<0>Deny</0> showing the blog <1>{name}</1> on Android (Google Play).",
+  "deny-showing-comment-google-play" : "<0>Deny</0> showing the <1>{commentName}</1>'s comment \"{commentHeading}\" to the <1>{postingName}</1>'s post \"{postingHeading}\" on Android (Google Play).",
+  "deny-showing-post-google-play" : "<0>Deny</0> showing the <1>{name}</1>'s post \"{heading}\" on Android (Google Play).",
   "description" : "Description",
+  "details" : "Details",
   "details-blocking" : "Details of blocking",
   "details-blocking-by-name" : "Details of blocking by {name}",
   "details-blocking-name" : "Details of blocking {name}",
@@ -193,8 +200,8 @@
   "height" : "Height",
   "help" : "Help",
   "hide" : "Hide",
-  "hide-blog-google-play" : "Do not show the blog <0>{name}</0> in Android (Google Play).",
-  "hide-comment-google-play" : "Do not show the comment \"{heading}\" in Android (Google Play).",
+  "hide-blog-google-play" : "Do not show the blog <0>{name}</0> on Android (Google Play).",
+  "hide-comment-google-play" : "Do not show the comment \"{heading}\" on Android (Google Play).",
   "hide-ellipsis" : "Hide...",
   "hide-friendship" : "Hide friendship",
   "hide-hidden-comments" : "Hide hidden comments",
@@ -202,7 +209,7 @@
   "hide-in-discussions" : "Hide in discussions",
   "hide-in-google-play" : "Hide in Android (Google Play)...",
   "hide-my-subscription" : "Hide my subscription",
-  "hide-post-google-play" : "Do not show the post \"{heading}\" in Android (Google Play).",
+  "hide-post-google-play" : "Do not show the post \"{heading}\" on Android (Google Play).",
   "hide-subscription-to-me" : "Hide subscription to me",
   "ignore" : "Ignore",
   "image" : "Image",
