--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -15,6 +15,9 @@
   "all" : "Все",
   "allowed-oppose-reactions" : "Разрешённые неодобрительные реакции",
   "allowed-support-reactions" : "Разрешённые одобрительные реакции",
+  "allow-showing-blog-google-play" : "<0>Разрешить</0> показ блога <1>{name}</1> на Android (Google Play).",
+  "allow-showing-comment-google-play" : "<0>Разрешить</0> показ комментария <1>{commentName}</1> \"{commentHeading}\" к посту <1>{postingName}</1> \"{postingHeading}\" на Android (Google Play).",
+  "allow-showing-post-google-play" : "<0>Разрешить</0> показ поста <1>{name}</1> \"{heading}\" на Android (Google Play).",
   "alt-text" : "Альтернативный текст",
   "alt-text-button" : "Альт. текст",
   "ask" : "Попросить",
@@ -105,7 +108,11 @@
   "deny-comments-reactions" : "Запретить комментарии и реакции",
   "deny-everything-hide" : "Запретить всё и скрыть в обсуждениях",
   "deny-everything-hide-in-discussion" : "Запретить всё и скрыть в обсуждении",
+  "deny-showing-blog-google-play" : "<0>Запретить</0> показ блога <1>{name}</1> на Android (Google Play).",
+  "deny-showing-comment-google-play" : "<0>Запретить</0> показ комментария <1>{commentName}</1> \"{commentHeading}\" к посту <1>{postingName}</1> \"{postingHeading}\" на Android (Google Play).",
+  "deny-showing-post-google-play" : "<0>Запретить</0> показ поста <1>{name}</1> \"{heading}\" на Android (Google Play).",
   "description" : "Описание",
+  "details" : "Подробности",
   "details-blocking" : "Подробности блокировки",
   "details-blocking-by-name" : "Подробности блокировки со стороны {name}",
   "details-blocking-name" : "Подробности блокировки {name}",
