--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -15,6 +15,9 @@
   "all" : "Усі",
   "allowed-oppose-reactions" : "Дозволені несхвальні реакції",
   "allowed-support-reactions" : "Дозволені схвальні реакції",
+  "allow-showing-blog-google-play" : "<0>Дозволити</0> показ блогу <1>{name}</1> на Android (Google Play).",
+  "allow-showing-comment-google-play" : "<0>Дозволити</0> показ коментаря <1>{commentName}</1> \"{commentHeading}\" до поста <1>{postingName}</1> \"{postingHeading}\" на Android (Google Play).",
+  "allow-showing-post-google-play" : "<0>Дозволити</0> показ посту <1>{name}</1> \"{heading}\" на Android (Google Play).",
   "alt-text" : "Альтернативний текст",
   "alt-text-button" : "Альт. текст",
   "ask" : "Попросити",
@@ -105,7 +108,11 @@
   "deny-comments-reactions" : "Заборонити коментарі та реакції",
   "deny-everything-hide" : "Заборонити все та приховати в обговореннях",
   "deny-everything-hide-in-discussion" : "Заборонити все та приховати в обговоренні",
+  "deny-showing-blog-google-play" : "<0>Заборонити</0> показ блогу <1>{name}</1> на Android (Google Play).",
+  "deny-showing-comment-google-play" : "<0>Заборонити</0> показ коментаря <1>{commentName}</1> \"{commentHeading}\" до поста <1>{postingName}</1> \"{postingHeading}\" на Android (Google Play).",
+  "deny-showing-post-google-play" : "<0>Заборонити</0> показ посту <1>{name}</1> \"{heading}\" на Android (Google Play).",
   "description" : "Опис",
+  "details" : "Подробиці",
   "details-blocking" : "Подробиці блокування",
   "details-blocking-by-name" : "Подробиці блокування з боку {name}",
   "details-blocking-name" : "Подробиці блокування {name}",
