Sending reports to sheriff.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -64,6 +64,7 @@
   "comment-edited-conflict" : "The comment was edited by somebody.",
   "commenting-allowed-to" : "Commenting allowed to",
   "comment-not-found" : "Comment not found",
+  "comment-optional" : "Comment (optional)",
   "comments" : "Comments",
   "comments-disabled" : "Comments are disabled",
   "comments-visible-to" : "Comments are visible to",
@@ -304,6 +305,9 @@
   },
   "invitation-buttons" : "<0>Create a new blog</0><1>or</1><2>Connect to your blog</2>",
   "italic" : "Italic",
+  "i-think-blog-hide" : "I think, the blog <0>{name}</0> should be hidden.",
+  "i-think-comment-hide" : "I think, the comment \"{heading}\" should be hidden.",
+  "i-think-post-hide" : "I think, the post \"{heading}\" should be hidden.",
   "kick" : "Kick",
   "kick-ellipsis" : "Kick from discussion...",
   "kicking-node" : "Kick {name} from the discussion",
@@ -491,6 +495,9 @@
   "reply" : "Reply",
   "reply-ellipsis" : "Reply...",
   "reply-prev-comment" : "Reply to previous comment",
+  "report-sheriff-ellipsis" : "Report to sheriff...",
+  "report-sheriff-sent" : "Report to sheriff sent",
+  "report-sheriff-title" : "Report to sheriff",
   "resend-mail" : "Send mail again",
   "reset-password" : "Reset Password",
   "reset-password-hint-instructions" : "A message was sent to your E-mail address <b>{emailHint}</b> with a secret code needed to reset the password. Please enter it in the field below.",
