--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -64,6 +64,7 @@
   "comment-edited-conflict" : "Коментар був кимось змінений.",
   "commenting-allowed-to" : "Коментування дозволене",
   "comment-not-found" : "Коментар не знайдено",
+  "comment-optional" : "Коментар (необов'язково)",
   "comments" : "Коментарі",
   "comments-disabled" : "Коментарі вимкнені",
   "comments-visible-to" : "Коментарі видно",
@@ -304,6 +305,9 @@
   },
   "invitation-buttons" : "<0>Створити новий блог</0><1>або</1><2>Увійти у свій блог</2>",
   "italic" : "Курсив",
+  "i-think-blog-hide" : "Я вважаю, що блог <0>{name}</0> слід приховати.",
+  "i-think-comment-hide" : "Я вважаю, що коментар \"{heading}\" слід приховати.",
+  "i-think-post-hide" : "Я вважаю, що пост \"{heading}\" слід приховати.",
   "kick" : "Вигнати",
   "kick-ellipsis" : "Вигнати з обговорення...",
   "kicking-node" : "Вигнати {name} з обговорення",
@@ -491,6 +495,9 @@
   "reply" : "Відповісти",
   "reply-ellipsis" : "Відповісти...",
   "reply-prev-comment" : "Відповідь на попередній коментар",
+  "report-sheriff-ellipsis" : "Поскаржитись до шерифа...",
+  "report-sheriff-sent" : "Скаргу до шерифа надіслано",
+  "report-sheriff-title" : "Скарга до шерифа",
   "resend-mail" : "Відправити листа ще раз",
   "reset-password" : "Скидання пароля",
   "reset-password-hint-instructions" : "На вашу адресу E-mail <b>{emailHint}</b> було надіслано повідомлення із секретним кодом для скидання пароля. Будь ласка, введіть його у поле нижче.",
