--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -64,6 +64,7 @@
   "comment-edited-conflict" : "Комментарий был кем-то изменён.",
   "commenting-allowed-to" : "Комментирование разрешено",
   "comment-not-found" : "Комментарий не найден",
+  "comment-optional" : "Комментарий (необязательно)",
   "comments" : "Комментарии",
   "comments-disabled" : "Комментарии отключены",
   "comments-visible-to" : "Комментарии видны",
@@ -304,6 +305,9 @@
   },
   "invitation-buttons" : "<0>Создать новый блог</0><1>или</1><2>Зайти в свой блог</2>",
   "italic" : "Курсив",
+  "i-think-blog-hide" : "Я считаю, что блог <0>{name}</0> следует скрыть.",
+  "i-think-comment-hide" : "Я считаю, что комментарий \"{heading}\" следует скрыть.",
+  "i-think-post-hide" : "Я считаю, что пост \"{heading}\" следует скрыть.",
   "kick" : "Выгнать",
   "kick-ellipsis" : "Выгнать из обсуждения...",
   "kicking-node" : "Выгнать {name} из обсуждения",
@@ -491,6 +495,9 @@
   "reply" : "Ответить",
   "reply-ellipsis" : "Ответить...",
   "reply-prev-comment" : "Ответ на предыдущий комментарий",
+  "report-sheriff-ellipsis" : "Пожаловаться шерифу...",
+  "report-sheriff-sent" : "Жалоба шерифу отправлена",
+  "report-sheriff-title" : "Жалоба шерифу",
   "resend-mail" : "Отправить письмо ещё раз",
   "reset-password" : "Сброс пароля",
   "reset-password-hint-instructions" : "На ваш адрес E-mail <b>{emailHint}</b> было отправлено сообщение с секретным кодом для сброса пароля. Пожалуйста, введите его в поле ниже.",
