Renamed "unknown" sheriff order reason to "other".

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -696,11 +696,11 @@
     "defamatory" : "Defamation (including racism)",
     "impersonating" : "Impersonation",
     "malware" : "Malware",
+    "other" : "Other",
     "privacy" : "Privacy violation",
     "scam" : "Scam",
     "spam" : "Spam",
     "threat" : "Threats",
-    "unknown" : "Unknown",
     "unlawful" : "Violation of the law"
   },
   "sheriff-order-sent" : "Sheriff's order is sent",
