--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -696,11 +696,11 @@
     "defamatory" : "Клевета (включая расизм)",
     "impersonating" : "Выдача себя за другого",
     "malware" : "Вредоносное ПО",
+    "other" : "Другое",
     "privacy" : "Нарушение тайны личной жизни",
     "scam" : "Мошенничество",
     "spam" : "Спам",
     "threat" : "Угрозы",
-    "unknown" : "Неизвестно",
     "unlawful" : "Нарушение закона"
   },
   "sheriff-order-sent" : "Приказ шерифа отправлен",
