--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -696,11 +696,11 @@
     "defamatory" : "Наклеп (включаючи расизм)",
     "impersonating" : "Видача себе за іншого",
     "malware" : "Шкідливе ПЗ",
+    "other" : "Інше",
     "privacy" : "Порушення таємниці особистого життя",
     "scam" : "Шахрайство",
     "spam" : "Спам",
     "threat" : "Погрози",
-    "unknown" : "Невідомо",
     "unlawful" : "Порушення закону"
   },
   "sheriff-order-sent" : "Наказ шерифа надіслано",
