Complains page - scaffolding.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -70,6 +70,7 @@
   "comments-visible-to" : "Comments are visible to",
   "comment-title" : "Comment",
   "comment-updated-at" : "updated",
+  "complains" : "Complains",
   "compress-images" : "Compress images",
   "confirm-password" : "Confirm password",
   "connect" : "Connect",
