--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -70,6 +70,7 @@
   "comments-visible-to" : "Комментарии видны",
   "comment-title" : "Комментарий",
   "comment-updated-at" : "изменён",
+  "complains" : "Жалобы",
   "compress-images" : "Сжимать картинки",
   "confirm-password" : "Подтверждение пароля",
   "connect" : "Подключиться",
