--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -70,6 +70,7 @@
   "comments-visible-to" : "Коментарі видно",
   "comment-title" : "Коментар",
   "comment-updated-at" : "змінений",
+  "complains" : "Скарги",
   "compress-images" : "Стискати картинки",
   "confirm-password" : "Підтвердження пароля",
   "connect" : "Підключитись",
