Displaying the list of complains.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -70,7 +70,23 @@
   "comments-visible-to" : "Comments are visible to",
   "comment-title" : "Comment",
   "comment-updated-at" : "updated",
+  "complain-heading" : {
+    "blog" : "Blog {name}",
+    "comment" : "Comment by {commentName} \"{commentHeading}\" in the post by {postingName} \"{postingHeading}\"",
+    "post" : "Post by {name} \"{heading}\""
+  },
   "complains" : "Complains",
+  "complain-status" : {
+    "accepted" : "Approved",
+    "invalid-target" : "Incorrect data",
+    "not-found" : "Not found",
+    "not-original" : "Not an original post",
+    "not-sheriff" : "Not governed",
+    "posted" : "Being processed",
+    "prepared" : "Ready for review",
+    "prepare-failed" : "Could not be processed",
+    "rejected" : "Rejected"
+  },
   "compress-images" : "Compress images",
   "confirm-password" : "Confirm password",
   "connect" : "Connect",
@@ -740,6 +756,7 @@
   "tooltip" : "Tooltip",
   "top" : "Top",
   "to-post" : "← Post",
+  "total-colon" : "Total:",
   "transfer" : "Transfer",
   "transfer-existing-name" : "Transfer an existing name",
   "transfer-existing-name-button" : "Transfer an Existing Name",
@@ -779,10 +796,12 @@
   "view-as-chart" : "View as chart",
   "view-as-list" : "View as list",
   "view-comments" : "View comments",
+  "view-complains" : "View complains",
   "view-earlier-comments" : "View earlier comments",
   "view-images-grid" : "View images as grid",
   "view-images-list" : "View images as list",
   "view-later-comments" : "View later comments",
+  "view-previous-complains" : "View previous complains",
   "view-source" : "View source",
   "view-source-title" : "View Source",
   "want-delete-addon" : "Do you really want to delete the add-on \"{name}\"?",
