--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -70,7 +70,23 @@
   "comments-visible-to" : "Комментарии видны",
   "comment-title" : "Комментарий",
   "comment-updated-at" : "изменён",
+  "complain-heading" : {
+    "blog" : "Блог {name}",
+    "comment" : "Комментарий {commentName} \"{commentHeading}\" к посту {postingName} \"{postingHeading}\"",
+    "post" : "Пост {name} \"{heading}\""
+  },
   "complains" : "Жалобы",
+  "complain-status" : {
+    "accepted" : "Одобрено",
+    "invalid-target" : "Некорректные данные",
+    "not-found" : "Не найдено",
+    "not-original" : "Не оригинальный пост",
+    "not-sheriff" : "Не под надзором",
+    "posted" : "Обрабатывается",
+    "prepared" : "Готово к рассмотрению",
+    "prepare-failed" : "Не удалось обработать",
+    "rejected" : "Отклонено"
+  },
   "compress-images" : "Сжимать картинки",
   "confirm-password" : "Подтверждение пароля",
   "connect" : "Подключиться",
@@ -740,6 +756,7 @@
   "tooltip" : "Подсказка",
   "top" : "В конец",
   "to-post" : "← Пост",
+  "total-colon" : "Всего:",
   "transfer" : "Переместить",
   "transfer-existing-name" : "Переместить существующее имя",
   "transfer-existing-name-button" : "Переместить существующее имя",
@@ -779,10 +796,12 @@
   "view-as-chart" : "В виде диаграммы",
   "view-as-list" : "В виде списка",
   "view-comments" : "Показать комментарии",
+  "view-complains" : "Показать жалобы",
   "view-earlier-comments" : "Показать предыдущие комментарии",
   "view-images-grid" : "Показать картинки в виде мозаики",
   "view-images-list" : "Показать картинки в виде списка",
   "view-later-comments" : "Показать следующие комментарии",
+  "view-previous-complains" : "Показать предыдущие жалобы",
   "view-source" : "Показать исходный текст",
   "view-source-title" : "Показать исходный текст",
   "want-delete-addon" : "Вы действительно хотите удалить дополнение \"{name}\"?",
