--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -70,7 +70,23 @@
   "comments-visible-to" : "Коментарі видно",
   "comment-title" : "Коментар",
   "comment-updated-at" : "змінений",
+  "complain-heading" : {
+    "blog" : "Блог {name}",
+    "comment" : "Коментар {commentName} \"{commentHeading}\" до поста {postingName} \"{postingHeading}\"",
+    "post" : "Пост {name} \"{heading}\""
+  },
   "complains" : "Скарги",
+  "complain-status" : {
+    "accepted" : "Затверджено",
+    "invalid-target" : "Невірні дані",
+    "not-found" : "Не знайдено",
+    "not-original" : "Не оригінальний пост",
+    "not-sheriff" : "Не під наглядом",
+    "posted" : "Обробляється",
+    "prepared" : "Готово до розгляду",
+    "prepare-failed" : "Не вдалося обробити",
+    "rejected" : "Відхилено"
+  },
   "compress-images" : "Стискати картинки",
   "confirm-password" : "Підтвердження пароля",
   "connect" : "Підключитись",
@@ -740,6 +756,7 @@
   "tooltip" : "Підказка",
   "top" : "У кінець",
   "to-post" : "← Пост",
+  "total-colon" : "Всього:",
   "transfer" : "Перемістити",
   "transfer-existing-name" : "Перемістити існуюче ім'я",
   "transfer-existing-name-button" : "Перемістити існуюче ім'я",
@@ -779,10 +796,12 @@
   "view-as-chart" : "У вигляді діаграми",
   "view-as-list" : "У вигляді списку",
   "view-comments" : "Показати коментарі",
+  "view-complains" : "Показати скарги",
   "view-earlier-comments" : "Показати попередні коментарі",
   "view-images-grid" : "Показати картинки у вигляді мозаїки",
   "view-images-list" : "Показати картинки у вигляді списку",
   "view-later-comments" : "Показати наступні коментарі",
+  "view-previous-complains" : "Показати попередні скарги",
   "view-source" : "Показати початковий текст",
   "view-source-title" : "Показати початковий текст",
   "want-delete-addon" : "Ви дійсно бажаєте видалити доповнення \"{name}\"?",
