--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -31,6 +31,7 @@
   "avatar-shape" : "Форма аватара",
   "avatar-too-small" : "Розмір картинки для аватара повинен бути хоча б 100x100 пікселів",
   "back-to-feed" : "← {feed}",
+  "back-to-list-complains" : "← Список скарг",
   "banned-android-google-play" : "Заборонено до показу на Андроїд (Google Play)",
   "bio" : "Про себе",
   "block" : "Заблокувати",
