--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -88,6 +88,7 @@
     "prepare-failed" : "Не вдалося обробити",
     "rejected" : "Відхилено"
   },
+  "complain-status-colon" : "Статус скарги:",
   "compress-images" : "Стискати картинки",
   "confirm-password" : "Підтвердження пароля",
   "connect" : "Підключитись",
